Put something in the generator fixture the filter has to skip
The non-JSON filter is publish-critical and no test could fail if reverted
-- the fixture held only JSON. It now carries a README, a .orig with
conflict markers and an extensionless file; the expected document is
byte-identical and deleting the filter turns the test red. Through the
generator, not the guard, which shares the predicate. Also two Sonar nits.